using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;

namespace HoloMeasurement.AppManager
{
    interface IDeletable
    {
        void DeleteFigure();
    }
}
