using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace HoloMeasurement.UserOperation
{
    interface IPolygonClosable
    {
        void ClosePolygon();
    }
}
